2005-11-14 Braden McDaniel  <braden@endoframe.com>

	Project file updates.

	* ide-projects/Windows/VisualC7_1/OpenVRML/OpenVRML.sln: Added
	README, ChangeLog, etc. to solution.
	* ide-projects/Windows/VisualC7_1/OpenVRML/antlr/antlr.vcproj:
	* ide-projects/Windows/VisualC7_1/OpenVRML/openvrml/openvrml.vcproj
	* ide-projects/Windows/VisualC7_1/OpenVRML/openvrml-gl/openvrml-gl.vcproj
	* ide-projects/Windows/VisualC7_1/OpenVRML/sdl-viewer/sdl-viewer.vcproj
	* ide-projects/Windows/VisualC7_1/OpenVRML/test-openvrml/test-openvrml.vcproj:
	Added file.


2005-11-14 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/node_impl_util.h
	(openvrml::node_impl_util::event_listener_base::event_listener_equal_to::operator()):
	static_cast the lhs of the comparison to
	openvrml::event_listener*.  Microsoft cl 13.10.3077 appears to
	have a bug with virtual inheritance and requires this static_cast
	to generate the correct code.  Without the static_cast, the
	comparison will never be true.

2005-11-14 Braden McDaniel  <braden@endoframe.com>

	Project file updates.

	* ide-projects/Windows/VisualC7_1/OpenVRML/antlr/antlr.vcproj
	* ide-projects/Windows/VisualC7_1/OpenVRML/openvrml/openvrml.vcproj
	* ide-projects/Windows/VisualC7_1/OpenVRML/openvrml-gl/openvrml-gl.vcproj
	* ide-projects/Windows/VisualC7_1/OpenVRML/sdl-viewer/sdl-viewer.vcproj

2005-11-14 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/field_value.h:  Quell warnings from
	the Microsoft compiler.

2005-11-14 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/node.cpp:  Initialize
	openvrml::node::ref_count_ to 0.

2005-11-14 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.h:  Declare
	openvrml::browser::vrml_from_url_creator as a struct for
	consistency with its definition.

2005-11-07 Braden McDaniel  <braden@endoframe.com>

	Support parsing nodes from unrecognized EXTERNPROTOs.

	* src/libopenvrml/openvrml/Vrml97Parser.g